@@ -4,6 +4,9 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2017-10-05
+ * Should have written tests for the new check privilege stuff.
+
 2017-10-04
  * check_privilege in Wing::Role::Result::Field now will also describe the field if it is privileged.
  * No longer hiding an error sending an email.
